# Notebook

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CNAME  Makefile  README.md  baidu_verify_codeva-poVbY3ZDhW.html  board.html  changelog.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  formatter.sh  friend.csv  friends.html  index.html  mkdocs.yml  pyproject.toml  requirements.txt  serve.sh  sitemap.xml  todo.html
.claude/commands/: add.md  check-markdown.md  understand.md
.claude/skills/: add.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: check.yml  static.yml  upload.yml  vercel_deploy.yml
AI/: TODO.html  index.html
AI/ADV/: 01-Transformers.html  02-FlowBased.html  03-GAN.html  04-VAE.html  05-Diffusion.html  06-Bayes.html  index.html
AI/Agents/: 01-base.html  02-system.html  accelerate.html  index.html  开源框架.html
AI/CV/: 00-1-intro.html  00-2-format.html  00-3-color.html  00-4-base.html  00-5-camera.html  01-classification.html  02-Image-location.html  03-Object-Recognition.html  03-face-Recognition.html  04-Segmentation.html  05-3D.html  06-motion_estimation.html  HumanPoseEstimation.html  OpenCV.html  index.html
AI/DL/: 01-MLP.html  02-CNN.html  03-Modern_CNN.html  04-RNN.html  (+5 more)
CS/: index.html
Class/: AdobeIllustrator.html  AdobePhotoshop.html  ITP-Law.html  ITP-Marketing.html  classes_in_zju.html  l2tp.html  马原.html
Interest/: bean_knowledge.html  index.html
Japanese/: lyrics.html
Math/: Calculator.html  ComplexFunction.html  ODE.html  Tableau.html  index.html  information.html  logic.html  signal.html  不等式.html
Project/: ZJU_Charger.html  awesome.html  balance_car.html  celechron.html  dRehmFlight.html  index.html  music_quiz.html  wand.html  website.html
Research/: index.html
Robotics/: index.html
Tools/: index.html
blog/: index.html  tags.html
docs/: board.md  changelog.md  changelog.yml  friends.md  index.md  todo.md
hooks/: excalidraw.py  friends.py  socialmedia.py  toc_manager.py
overrides/: home.html  main.html
search/: search_index.json
(+897 files in other folders)
