[project]
name = "philfan-notebook"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
  "mkdocs==1.6.1",
  "mkdocs-get-deps==0.2.0",
  "mkdocs-git-revision-date-localized-plugin==1.2.6",
  "mkdocs-heti-plugin==0.1.6",
  "mkdocs-material==9.5.31",
  "mkdocs-material-extensions==1.3.1",
  "mkdocs-minify-plugin==0.8.0",
  "mkdocs-statistics-plugin",
  "mkdocs-print-site-plugin==2.6.0",
  "mdx-truly-sane-lists==1.3",
  "mkdocs-rss-plugin==1.17.3",
  "mkdocs-git-committers-plugin-2==2.5.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pyrefly",
]

[tool.uv]
package = false

[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "docs/**/*.ipynb",
  "docs/**/assets/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
